Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29810

ScreenRecorder's options dialog doesn't resize well

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 12.0.0-rc1
    • Qt Creator 12.0.0-beta2
    • All Other Issues
    • None
    • Ubuntu 22.04 LTS
    • 7fce84394 (12.0)

      See screenshot:

      • Half of the dialog is empty
      • The preview doesn't resize at all
        I think it could be helpful enlarge the preview to select details.
      • The numbers (x,y,w,h) and the OK/Cancel buttons are quite lonely on the right

        For Gerrit Dashboard: QTCREATORBUG-29810
        # Subject Branch Project Status CR V

            portale Alessandro Portale
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes