ScreenRecorder: Make recording options dialog non-resizable

Ther resizing behavior is quite odd.

One planned feature for the plugin is a zoomable crop view. Once that is
in place (in QtC 13 or later), like suggested in the report, the dialog
can be scalable and the crop view can grow using the available space.

Fixes: QTCREATORBUG-29810
Change-Id: Ic77f81f704546d2730599b00664606aada3280d8
Reviewed-by: Robert Löhning <robert.loehning@qt.io>